--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,5 +15,5 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v3
         with:
-          token: secrets.RELEASE_PLEASE
+          token: ${{ secrets.RELEASE_PLEASE }}
           release-type: node
