ci: fix github action including package-name

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,17 +3,21 @@ on:
     branches:
       - main
 
-permissions:
-  contents: write
-  pull-requests: write
-
 name: release-please
+
+permissions: {}
 
 jobs:
   release-please:
+    permissions:
+      contents: write # to create release commit (google-github-actions/release-please-action)
+      pull-requests: write # to create release PR (google-github-actions/release-please-action)
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: google-github-actions/release-please-action@v3
         with:
           token: ${{ secrets.RELEASE_PLEASE }}
           release-type: node
+          package-name: howto-release-please
