--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "howto-release-please",
   "version": "1.0.0",
   "description": "POC to use Google's release-please github action to create releases",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "start": "node .",
