--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,6 +22,16 @@ jobs:
           token: ${{ secrets.RELEASE_PLEASE }}
           release-type: node
           package-name: howto-release-please
+          changelog-types: '[
+            { \"type\": \"feat\", \"section\": \"🆕 Features\", \"hidden\": false },
+            { \"type\": \"fix\", \"section\": \"🐛 Bug Fixes\", \"hidden\": false },
+            { \"type\": \"chore\", \"section\": \"🔧 Others\", \"hidden\": false },
+            { \"type\": \"docs\", \"section\": \"📝 Docs\", \"hidden\": false },
+            { \"type\": \"style\", \"section\": \"🎨 Styling\", \"hidden\": false },
+            { \"type\": \"refactor\", \"section\": \"🔄 Code Refactoring\", \"hidden\": false },
+            { \"type\": \"perf\", \"section\": \"📈 Performance Improvements\", \"hidden\": false },
+            { \"type\": \"test\", \"section\": \"🔬 Tests\", \"hidden\": false },
+            { \"type\": \"ci\", \"section\": \"☁️ CI\", \"hidden\": false }]'
       - run: echo "A release was created."
         if: ${{ steps.release.outputs.releases_created }}
 
