ci: fix relese-and-publish gh action

--- a/.github/workflows/release-and-publish.yml
+++ b/.github/workflows/release-and-publish.yml
@@ -37,8 +37,8 @@ jobs:
         with:
           egress-policy: audit
 
-      - name: Checkout
-        uses: 🔔 actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # 4.1.1.
+      - name: 🔔 Checkout
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # 4.1.1.
 
       - name: ⚙️ Setup Node.js
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # 4.0.2
