--- a/.github/workflows/release-and-publish.yml
+++ b/.github/workflows/release-and-publish.yml
@@ -9,12 +9,10 @@ permissions: {}
 
 jobs:
   release-please:
+    runs-on: ubuntu-latest
     permissions:
       contents: write # to create release commit
       pull-requests: write # to create release PR
-      id-token: write # to allow npm publish provenance generation
-
-    runs-on: ubuntu-latest
 
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
@@ -27,8 +25,11 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
   npm-publish:
-    runs-on: ubuntu-latest
     needs: [release-please]
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write # to allow npm publish provenance generation
+
     # this if statements ensure that a publication only occurs when a new release is created:
     if: ${{ needs.release-please.outputs.release_created }}
 
