--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "author": "Íñigo Marquínez",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/inigomarquinez/howto-release-please"
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.1.0",
     "@commitlint/config-conventional": "^19.1.0",
