ci: change release-please configuration to modify the release tag and name

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -51,8 +51,8 @@
   ],
   "packages": {
     ".": {
-      "package-name": "howto-release-please",
-      "monorepo-tags": true
+      "include-component-in-tag": true,
+      "release-as": "1.0.0"
     }
   }
 }
