ci!: configure release process

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -51,6 +51,7 @@
   ],
   "packages": {
     ".": {
+      "packageName": "@inigomarquinez/howto-release-please",
       "include-component-in-tag": true,
       "release-as": "1.0.0"
     }
